<resources>
    <string name="app_name">contact-list</string>
    <string name="contacts">Contacts</string>
    <string name="empty_contacts_message">You have no contacts yet</string>
    <string name="view_contact">View contact</string>
    <string name="search">Search</string>
    <string name="options">Options</string>
    <string name="sort_by">Sort by</string>
    <string name="az">A-Z</string>
    <string name="za">Z-A</string>
    <string name="add_contact">Add contact</string>
    <string name="contact_name">%1$s %2$s</string>
    <string name="close">Close</string>
    <string name="navigate_up">Navigate up</string>
    <string name="save_contact">Save contact</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="zip">Zip</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="required">*required</string>
    <string name="fill_all_required_fields">Please fill in all required fields</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_contact">Delete contact?</string>
    <string name="delete_supporting_text">Contact will be permanently removed from your device.</string>
    <string name="contact_info">Contact info</string>
    <string name="location">%1$s - %2$s, %3$s</string>
    <string name="no_zip_location">%1$s - %2$s</string>
    <string name="not_available">N/A</string>
    <string name="image_not_available">Image could not be loaded</string>
    <string name="edit_contact">Edit contact</string>
    <string name="contact_added">Contact added to the list</string>
    <string name="contact_updated">Contact details updated</string>
    <string name="contact_deleted">Contact removed from the list</string>
    <string name="contact_photo">Contact photo</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="dialog_title_remove">Remove photo?</string>
    <string name="dialog_supporting_text_remove">Contact photo will be removed.</string>
    <string name="contact_photo_removed">Contact photo removed</string>
</resources>