<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:contentDescription="@string/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/sort"
        android:contentDescription="@string/sort_by"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_by"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/az"
                android:contentDescription="@string/az"
                android:title="@string/az"
                app:showAsAction="never" />
            <item
                android:id="@+id/za"
                android:contentDescription="@string/za"
                android:title="@string/za"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>