<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContactFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationContentDescription="@string/navigate_up"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/save_contact"
            app:titleTextColor="?attr/colorOnSurface" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_account"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:shapeAppearance="@style/circleImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shape_camera"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@color/md_theme_primary"
        app:layout_constraintBottom_toBottomOf="@id/img_account"
        app:layout_constraintEnd_toEndOf="@id/img_account"
        app:shapeAppearance="@style/circleImageView" />

    <ImageView
        android:id="@+id/img_camera"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@id/shape_camera"
        app:layout_constraintEnd_toEndOf="@id/shape_camera"
        app:layout_constraintStart_toStartOf="@id/shape_camera"
        app:layout_constraintTop_toTopOf="@id/shape_camera" />

    <ImageView
        android:id="@+id/icon_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@id/label_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_first_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_first_name"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/first_name"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon_person"
        app:layout_constraintTop_toBottomOf="@id/img_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_last_name"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/last_name"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="@id/label_first_name"
        app:layout_constraintStart_toStartOf="@id/label_first_name"
        app:layout_constraintTop_toBottomOf="@id/label_first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="@id/label_phone"
        app:layout_constraintStart_toStartOf="@id/icon_person"
        app:layout_constraintTop_toTopOf="@id/label_phone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_phone"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/phone"
        app:errorEnabled="true"
        app:helperText="@string/required"
        app:layout_constraintEnd_toEndOf="@id/label_last_name"
        app:layout_constraintStart_toStartOf="@id/label_last_name"
        app:layout_constraintTop_toBottomOf="@id/label_last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@id/label_address"
        app:layout_constraintStart_toStartOf="@id/icon_phone"
        app:layout_constraintTop_toTopOf="@id/label_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_address"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="@id/label_phone"
        app:layout_constraintStart_toStartOf="@id/label_phone"
        app:layout_constraintTop_toBottomOf="@id/label_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_city"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/city"
        app:layout_constraintStart_toStartOf="@id/label_address"
        app:layout_constraintTop_toBottomOf="@id/label_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_area"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/area"
        app:layout_constraintStart_toEndOf="@id/label_city"
        app:layout_constraintTop_toBottomOf="@id/label_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/label_zip"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/zip"
        app:layout_constraintStart_toEndOf="@id/label_area"
        app:layout_constraintTop_toBottomOf="@id/label_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_cancel"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="@id/label_city"
        app:layout_constraintTop_toBottomOf="@id/label_city" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@id/label_zip"
        app:layout_constraintTop_toBottomOf="@id/label_zip" />

</androidx.constraintlayout.widget.ConstraintLayout>