<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/contact_detail"
            app:navigationContentDescription="@string/navigate_up"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:titleTextColor="?attr/colorOnSurface" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_user_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:shapeAppearance="@style/circleImageView" />

    <TextView
        android:id="@+id/text_contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="?attr/textAppearanceDisplaySmall"
        android:textColor="@color/md_theme_onSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_user_photo"
        tools:text="Sofia Sacchi" />

    <com.google.android.material.card.MaterialCardView
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_contact_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_contact_info"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="@color/md_theme_onSurface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_phone"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_phone"
                app:layout_constraintStart_toStartOf="@id/text_title"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                app:tint="@color/md_theme_onSurface" />

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_onSurface"
                app:layout_constraintStart_toEndOf="@id/img_phone"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                tools:text="+34 646 445 826" />

            <TextView
                android:id="@+id/label_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/phone"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_onSurfaceVariant"
                app:layout_constraintStart_toStartOf="@id/text_phone"
                app:layout_constraintTop_toBottomOf="@id/text_phone" />

            <ImageView
                android:id="@+id/img_location"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@id/text_location"
                app:layout_constraintStart_toStartOf="@id/text_title"
                app:layout_constraintTop_toTopOf="@id/text_address"
                app:tint="@color/md_theme_onSurface" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_onSurface"
                app:layout_constraintStart_toStartOf="@id/label_phone"
                app:layout_constraintTop_toBottomOf="@id/label_phone"
                tools:text="Rúa de San Pedro, 63" />

            <TextView
                android:id="@+id/text_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_onSurface"
                app:layout_constraintStart_toStartOf="@id/text_address"
                app:layout_constraintTop_toBottomOf="@id/text_address"
                tools:text="Castellanos De Villiquera - Salamanca, 37798" />

            <TextView
                android:id="@+id/label_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/address"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="@color/md_theme_onSurfaceVariant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_location"
                app:layout_constraintTop_toBottomOf="@id/text_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>